[notes/ms_sim] WIP: terms

--- a/notes/ms_sim.tex
+++ b/notes/ms_sim.tex
@@ -263,32 +263,47 @@ may be discontinuous functions).\\
 
 Using Magnus expansion, we can write down the unitary evalution of the system as
 \eqar{
-  U_{MS}(\tau)=&\exp\sqr{\sum_{j=1,2}\sum_{k}\frac{\eta_{kj}}{2}\paren{\alpha^k(\tau)a^\dagger_k-{\alpha^*}^k(\tau)a_k}\sigma^j_x}\exp\paren{\ui\Theta(\tau)\sigma^1_x\sigma^2_x}
+  U_{MS}(\tau)=&\exp\sqr{\sum_{j=1,2}\sum_{k}\frac{\eta_{kj}}{2}\paren{\alpha_k(\tau)a^\dagger_k-\alpha^*_k(\tau)a_k}\sigma^j_x}\exp\paren{\ui\Theta(\tau)\sigma^1_x\sigma^2_x}
 }
 where
 \eqar{
-  \alpha^k(\tau)=&\int_0^\tau\Omega(t)\ue^{\ui\theta_k(t)}\ud t
+  \alpha_k(\tau)=&\int_0^\tau\Omega(t)\ue^{\ui\theta_k(t)}\ud t
 }
 describes the displacement of the $k$-th mode, and
 \eqar{
   \Theta(\tau)=&\frac{1}{2}\sum_k\eta_{k1}\eta_{k2}\int_0^\tau\!\!\ud t\int_0^t\!\!\ud t'
-  \ \ \Omega(t)\Omega(t')\sin(\theta_k(t)-\theta_k(t'))
+  \ \Omega(t)\Omega(t')\sin(\theta_k(t)-\theta_k(t'))
 }
 is the angle of the two-qubit rotation. For a proper MS gate of length $T$,
-we need to have $\alpha^k(T)=0$ for all $k$s and the rotation angle
+we need to have $\alpha_k(T)=0$ for all $k$s and the rotation angle
 at the end of the pulse $\Theta(T)$ matching the angle we want.\\
 
 For the purpose of optimization, the quantities we care about are.
 \begin{enumerate}
 \item Closure
   \eqar{
-    \alpha^k(T)=&\int_0^T\Omega(t)\ue^{\ui\theta_k(t)}\ud t
+    \alpha_k(T)=&\int_0^T\Omega(t)\ue^{\ui\theta_k(t)}\ud t
   }
 \item Gradient of closure w.r.t. mode frequencies
   \eqar{
-    \frac{\partial}{\partial\omega_k}\alpha^k(T)=&\int_0^T\frac{\partial}{\partial\omega_k}\Omega(t)\ue^{\ui\theta_k(t)}\ud t\\
+    \frac{\partial}{\partial\omega_k}\alpha_k(T)=&\int_0^T\frac{\partial}{\partial\omega_k}\Omega(t)\ue^{\ui\theta_k(t)}\ud t\\
     =&\ui\int_0^T\Omega(t)\ue^{\ui\theta_k(t)}\frac{\partial\theta_k(t)}{\partial\omega_k}\ud t\\
     =&\ui\int_0^T\Omega(t)\ue^{\ui\theta_k(t)}t\ud t
+  }
+  When closure is assumed, this can be re-written as,
+  \eqar{
+    \frac{\partial}{\partial\omega_k}\alpha_k(T)=&\ui\int_0^T\Omega(t)\ue^{\ui\theta_k(t)}t\ud t\\
+    =&\ui\left.t\int_0^t\Omega(t')\ue^{\ui\theta_k(t')}\ud t'\right|_0^T-\ui\int_0^T\ud t\int_0^t\Omega(t')\ue^{\ui\theta_k(t')}\ud t'\\
+    =&-\ui\int_0^T\ud t\int_0^t\Omega(t')\ue^{\ui\theta_k(t')}\ud t'
+  }
+  which is proportional to average displacement.
+  Moreover, if the pulse is symmetric, zeroing this value will also automatically
+  zero the final displacement thus remove the need to optimize
+  two values at the same time.
+\item Enclosed area
+  \eqar{
+    A_k=&\int_0^T\!\!\ud t\int_0^t\!\!\ud t'
+    \ \Omega(t)\Omega(t')\sin(\theta_k(t)-\theta_k(t'))
   }
 \end{enumerate}
 
