--- a/notes/ms_sim.tex
+++ b/notes/ms_sim.tex
@@ -283,37 +283,37 @@ For the purpose of optimization, the quantities we care about are.
   \eqar{
     \alpha_k(T)=&\int_0^T\Omega(t)\ue^{\ui\theta_k(t)}\ud t
   }
+\item Gradient of closure w.r.t. mode frequencies
+  \eqar{
+    \pdiff{\alpha_k(T)}{\omega_k}=&\int_0^T\frac{\partial}{\partial\omega_k}\Omega(t)\ue^{\ui\theta_k(t)}\ud t\\
+    =&\ui\int_0^T\Omega(t)\ue^{\ui\theta_k(t)}\frac{\partial\theta_k(t)}{\partial\omega_k}\ud t\\
+    =&\ui\int_0^T\Omega(t)\ue^{\ui\theta_k(t)}t\ud t
+  }
+  When closure is assumed, this can be re-written as,
+  \eqar{
+    \pdiff{\alpha_k(T)}{\omega_k}=&\ui\int_0^T\Omega(t)\ue^{\ui\theta_k(t)}t\ud t\\
+    =&\ui\left.t\int_0^t\Omega(t')\ue^{\ui\theta_k(t')}\ud t'\right|_0^T-\ui\int_0^T\ud t\int_0^t\Omega(t')\ue^{\ui\theta_k(t')}\ud t'\\
+    =&-\ui\int_0^T\ud t\int_0^t\Omega(t')\ue^{\ui\theta_k(t')}\ud t'
+  }
+  which is proportional to average displacement.
+  Moreover, if the pulse is symmetric, zeroing this value will also automatically
+  zero the final displacement thus remove the need to optimize
+  two values at the same time.
 \item Enclosed area
   \eqar{
-    A_k=&\int_0^T\!\!\ud t\int_0^t\!\!\ud t'
-    \ \Omega(t)\Omega(t')\sin(\theta_k(t)-\theta_k(t'))\\
-    =&\int_0^T\!\!\ud t\int_0^t\!\!\ud t'
-    \ \Omega(t)\Omega(t')\paren{\sin(\theta_k(t))\cos(\theta_k(t'))-\cos(\theta_k(t))\sin(\theta_k(t'))}\\
-    =&\int_0^T\!\!\ud t\ \Omega(t)\sin(\theta_k(t))\int_0^t\!\!\ud t'
-    \ \Omega(t')\cos(\theta_k(t')) -
-    \int_0^T\!\!\ud t\ \Omega(t)\cos(\theta_k(t))\int_0^t\!\!\ud t'
-    \ \Omega(t')\sin(\theta_k(t'))\\
+    A_k=&\mathrm{Im}\paren{\int_0^T\!\!\ud t\int_0^t\!\!\ud t'
+      \ \Omega(t)\Omega(t')\ue^{\ui\theta_k(t)-\ui\theta_k(t')}}\\
+    =&\mathrm{Im}\paren{\int_0^T\!\!\ud t\ \Omega(t)\ue^{\ui\theta_k(t)}\int_0^t\!\!\ud t'
+      \ \Omega(t')\ue^{-\ui\theta_k(t')}}
+  }
+\item Gradient of enclosed area w.r.t. mode frequencies
+  \eqar{
+    \pdiff{A_k}{\omega_k}
+    =&\mathrm{Re}\paren{\int_0^T\!\!\ud t\ t\Omega(t)\ue^{\ui\theta_k(t)}\int_0^t\!\!\ud t'
+      \ \Omega(t')\ue^{-\ui\theta_k(t')}-\int_0^T\!\!\ud t\ \Omega(t)\ue^{\ui\theta_k(t)}\int_0^t\!\!\ud t'
+      \ t'\Omega(t')\ue^{-\ui\theta_k(t')}}
   }
 \end{enumerate}
-As well as their gradient w.r.t. mode frequencies which we'll calculate later.\\
-
-The gradient of the closure w.r.t. mode frequencies does deserve a special mention,
-however.
-\eqar{
-  \frac{\partial}{\partial\omega_k}\alpha_k(T)=&\int_0^T\frac{\partial}{\partial\omega_k}\Omega(t)\ue^{\ui\theta_k(t)}\ud t\\
-  =&\ui\int_0^T\Omega(t)\ue^{\ui\theta_k(t)}\frac{\partial\theta_k(t)}{\partial\omega_k}\ud t\\
-  =&\ui\int_0^T\Omega(t)\ue^{\ui\theta_k(t)}t\ud t
-}
-When closure is assumed, this can be re-written as,
-\eqar{
-  \frac{\partial}{\partial\omega_k}\alpha_k(T)=&\ui\int_0^T\Omega(t)\ue^{\ui\theta_k(t)}t\ud t\\
-  =&\ui\left.t\int_0^t\Omega(t')\ue^{\ui\theta_k(t')}\ud t'\right|_0^T-\ui\int_0^T\ud t\int_0^t\Omega(t')\ue^{\ui\theta_k(t')}\ud t'\\
-  =&-\ui\int_0^T\ud t\int_0^t\Omega(t')\ue^{\ui\theta_k(t')}\ud t'
-}
-which is proportional to average displacement.
-Moreover, if the pulse is symmetric, zeroing this value will also automatically
-zero the final displacement thus remove the need to optimize
-two values at the same time.\\
 
 \section{Segmented pulse}
 When parameterizing the pulse shape used to drive MS gate,
