--- a/notes/ms_sim.tex
+++ b/notes/ms_sim.tex
@@ -392,7 +392,7 @@ we need to deal with is
   &(a_0t^2 + b_0t + c_0)\ue^{\ui \paren{\omega t + \varphi_0}}
 }
 Combining $A_i$, $B_i$ and $C_i$, we actually care about the integral
-$\displaystyle F_n(\omega, t)\equiv\int t^n\ue^{\ui \paren{\omega t}}\ud t$
+$\displaystyle F_n(\omega, t)\equiv\int t^n\ue^{\ui\omega t}\ud t$
 up to $n=4$ order (see below) (the phase factor $\varphi_0$ is ignored
 since it's just a global multiplicity factor). From symbolic evaluation we have,
 \eqar{
@@ -401,6 +401,11 @@ since it's just a global multiplicity factor). From symbolic evaluation we have,
   F_2(\omega, t)=&\frac{-\ui\omega^2t^2+2\omega t+2\ui}{\omega^3}\ue^{\ui\omega t}\\
   F_3(\omega, t)=&\frac{-\ui\omega^3t^3+3\omega^2t^2+6\ui\omega t-6}{\omega^4}\ue^{\ui\omega t}\\
   F_4(\omega, t)=&\frac{-\ui\omega^4t^4+4\omega^3t^3+12\ui\omega t-24\omega t-24\ui}{\omega^5}\ue^{\ui\omega t}
+}
+We also have
+\eqar{
+  \pdiff{F_n(\omega, t)}{t}=&t^n\ue^{\ui\omega t}\\
+  \pdiff{F_n(\omega, t)}{\omega}=&\ui F_{n+1}(\omega, t)
 }
 
 For a pulse sequence where the amplitude and phase of the pulse are given by
@@ -416,7 +421,7 @@ For closure, the shift within each segment is,
   \alpha_k^n\equiv&\int_{t_n}^{t_{n+1}}\Omega(t)\ue^{\ui\theta_k(t)}\ud t\\
   =&\int_{t_n}^{t_{n+1}}\paren{\Omega_n+\Omega'_n\paren{t-t_n}}\ue^{\ui\paren{\omega_kt-\theta_n-\bar\omega_n\paren{t-t_n}}}\ud t\\
   =&\int_{0}^{\tau_n}\paren{\Omega_n+\Omega'_n t}\ue^{\ui\paren{\omega_kt+\varphi_k^n-\bar\omega_n t}}\ud t\\
-  =&\ue^{\ui\varphi_k^n}\paren{\Omega_nF_0(\delta_k^n, \tau_n)+\Omega'_nF_1(\delta_k^n, \tau_n)}
+  =&\ue^{\ui\varphi_k^n}\paren{\Omega_nF_0(\delta_k^n, \tau_n)+\Omega'_nF_1(\delta_k^n, \tau_n)-\Omega_nF_0(\delta_k^n, 0)-\Omega'_nF_1(\delta_k^n, 0)}
 }
 where $\tau_n\equiv t_{n+1}-t_n$ is the length of the $n$-th segment, $\delta_k^n\equiv\omega_k-\bar\omega_n$ is the detuning of the $n$-th segment from the $k$-th mode, $\varphi_k^n\equiv\omega_kt_n-\theta_n$ is the initial phase difference with the $k$-th mode at the beginning of the $n$-th segment.\\
 
@@ -425,31 +430,39 @@ And the final closure is the sum of the value within each segment,
   \alpha_k(T)=&\sum_{n=0}^{N_s-1}\alpha_k^n
 }
 
-For closure gradient w.r.t. mode frequencies, the gradient integral for each segment,
-\eqar{
-  \beta_k^n\equiv&\int_{t_n}^{t_{n+1}}\Omega(t)t\ue^{\ui\theta_k(t)}\ud t\\
-  =&\int_{t_n}^{t_{n+1}}\paren{\Omega_n+\Omega'_n\paren{t-t_n}}t\ue^{\ui\paren{\omega_kt-\theta_n-\bar\omega_n\paren{t-t_n}}}\ud t\\
-  =&\int_{0}^{\tau_n}\paren{\Omega_n+\Omega'_n t}\paren{t+t_n}\ue^{\ui\paren{\omega_kt+\varphi_k^n-\bar\omega_n t}}\ud t\\
-  =&\ue^{\ui\varphi_k^n}\paren{\Omega_nt_nF_0(\delta_k^n, \tau_n)+\paren{\Omega_n+\Omega'_nt_n}F_1(\delta_k^n, \tau_n)+\Omega'_nF_2(\delta_k^n, \tau_n)}
-}
-and the full gradient,
-\eqar{
-  \pdiff{\alpha_k(T)}{\omega_k}=&\ui\sum_{n=0}^{N_s-1}\beta_k^n
-}
-
 For the average displacement, the $A_n$ terms are simply $\tau_n$ and the $B_n$ terms
 are $\alpha_k^n$. The $C_n$ terms has to be computed,
 \eqar{
   \bar\alpha_k^n=&\int_{t_{n}}^{t_{n+1}}\!\!\ud t\int_{t_n}^{t}\!\!\ud t'\ \Omega(t')\ue^{\ui\theta_k(t')}\\
   =&\int_{0}^{\tau_n}\!\!\ud t\int_{t_n}^{t_n+t}\!\!\ud t'\ \paren{\Omega_n+\Omega'_n\paren{t'-t_n}}\ue^{\ui\paren{\omega_kt'-\theta_n-\bar\omega_n\paren{t'-t_n}}}\\
   =&\ue^{\ui\varphi_k^n}\int_{0}^{\tau_n}\!\!\ud t\int_{0}^{t}\!\!\ud t'\ \paren{\Omega_n+\Omega'_n t'}\ue^{\ui\delta_k^nt'}\\
-  =&\ue^{\ui\varphi_k^n}\int_{0}^{\tau_n}\!\!\ud t
-  \paren{\paren{\frac{\Omega'_n-\ui\Omega_n\delta_k^n}{{\delta_k^n}^2}-\ui\frac{\Omega'_nt}{\delta_k^n}}\ue^{\ui\delta_k^nt}-\frac{\Omega'_n-\ui\Omega_n\delta_k^n}{{\delta_k^n}^2}}\\
-  =&\ue^{\ui\varphi_k^n}
-  \paren{\frac{\Omega'_n-\ui\Omega_n\delta_k^n}{{\delta_k^n}^2}F_0(\delta_k^n, \tau_n)-\frac{\ui\Omega'_n}{\delta_k^n}F_1(\delta_k^n, \tau_n)-\frac{\Omega'_n-\ui\Omega_n\delta_k^n}{{\delta_k^n}^2}\tau_n}\\
+  =&\frac{\ue^{\ui\varphi_k^n}}{{\delta_k^n}^2}\int_{0}^{\tau_n}\!\!\ud t
+  \paren{\paren{\Omega'_n-\ui\Omega_n\delta_k^n-\ui\Omega'_n\delta_k^nt}\ue^{\ui\delta_k^nt}-\paren{\Omega'_n-\ui\Omega_n\delta_k^n}}\\
+  =&\frac{\ue^{\ui\varphi_k^n}}{{\delta_k^n}^2}
+  \lparen{\paren{\Omega'_n-\ui\Omega_n\delta_k^n}F_0(\delta_k^n, \tau_n)-\ui\Omega'_n\delta_k^nF_1(\delta_k^n, \tau_n)}\\
+  &\rparen{-\paren{\Omega'_n-\ui\Omega_n\delta_k^n}F_0(\delta_k^n, 0)+\ui\Omega'_n\delta_k^nF_1(\delta_k^n, 0)-\paren{\Omega'_n-\ui\Omega_n\delta_k^n}\tau_n}\\
 }
 
 For the enclosed area, the $A_n$ and $B_n$ terms are both the $\alpha_k^n$
-computed above,
+computed above. The $C_n$ terms,
+\eqar{
+  \gamma_k^n=&\int_{t_{n}}^{t_{n+1}}\!\!\ud t\ \Omega(t)\ue^{\ui\theta_k(t)}\int_{t_n}^{t}\!\!\ud t'\ \Omega(t')\ue^{\ui\theta_k(t')}\\
+  =&\int_{t_{n}}^{t_{n+1}}\!\!\ud t\ \paren{\Omega_n+\Omega'_n\paren{t-t_n}}\ue^{\ui\paren{\omega_kt-\theta_n-\bar\omega_n\paren{t-t_n}}}\int_{t_n}^{t}\!\!\ud t'\ \paren{\Omega_n+\Omega'_n\paren{t'-t_n}}\ue^{\ui\paren{\omega_kt'-\theta_n-\bar\omega_n\paren{t'-t_n}}}\\
+  =&\ue^{\ui2\varphi_k^n}\int_{0}^{\tau_n}\!\!\ud t\ \paren{\Omega_n+\Omega'_nt}\ue^{\ui\delta_k^nt}\int_{0}^{t}\!\!\ud t'\ \paren{\Omega_n+\Omega'_nt'}\ue^{\ui\delta_k^nt'}\\
+  =&\ue^{\ui2\varphi_k^n}\int_{0}^{\tau_n}\!\!\ud t\ \paren{\Omega_n+\Omega'_nt}\ue^{\ui\delta_k^nt}
+  \paren{\paren{\frac{\Omega'_n-\ui\Omega_n\delta_k^n}{{\delta_k^n}^2}-\ui\frac{\Omega'_nt}{\delta_k^n}}\ue^{\ui\delta_k^nt}-\frac{\Omega'_n-\ui\Omega_n\delta_k^n}{{\delta_k^n}^2}}\\
+  =&\frac{\ue^{\ui2\varphi_k^n}}{{\delta_k^n}^2}\int_{0}^{\tau_n}\!\!\ud t\paren{
+    \paren{\Omega_n+\Omega'_nt}\paren{\paren{\Omega'_n-\ui\Omega_n\delta_k^n}-\ui\Omega'_n\delta_k^nt}\ue^{\ui2\delta_k^nt}-\paren{\Omega_n+\Omega'_nt}\paren{\Omega'_n-\ui\Omega_n\delta_k^n}\ue^{\ui\delta_k^nt}}\\
+  =&\frac{\ue^{\ui2\varphi_k^n}}{{\delta_k^n}^2}
+  \lparen{
+    \Omega_n\paren{\Omega'_n-\ui\Omega_n\delta_k^n}F_0(2\delta_k^n, \tau_n)
+    +\Omega'_n\paren{\Omega'_n-\ui2\Omega_n\delta_k^n}F_1(2\delta_k^n, \tau_n)
+    -\ui{\Omega'_n}^2\delta_k^nF_2(2\delta_k^n, \tau_n)
+  }\\
+  &\rparen{
+    -\paren{\Omega'_n-\ui\Omega_n\delta_k^n}
+    \paren{\Omega_nF_0(\delta_k^n, \tau_n)+\Omega'_nF_1(\delta_k^n, \tau_n)}
+  }\\
+}
 
 \end{document}
